[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://GrabSprite.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Stone.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]

[node name="Stone" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="StoneSprite" type="Sprite" parent="."]
scale = Vector2( 0.207031, 0.207031 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="PickupArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource( 2 )

[node name="GrabSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 5, 5 )
scale = Vector2( 0.5625, 0.5 )
texture = ExtResource( 2 )
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
[connection signal="area_exited" from="PickupArea" to="." method="_on_PickupArea_area_exited"]
